[project]
name = "tracking-kirin"
version = "0.1.0"
description = "Bot for fast osu! and Quaver score tracking"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.18",
    "discord-py>=2.5.2",
    "osuapi",
    "python-dateutil>=2.9.0.post0",
    "toml>=0.10.2",
]

[tool.uv.sources]
osuapi = { git = "https://github.com/YaLTeR/osuapi.git", branch = "async-def" }
